src/test/ui/in-band-lifetimes/mismatched_trait.stderr
error[E0621]: explicit lifetime required in the type of `y`
  --> $DIR/mismatched_trait.rs:16:9
   |
15 |     fn baz(&self, x: &'a u32, y: &u32) -> &'a u32 {
   |                               - consider changing the type of `y` to `&'a u32`
16 |         y //~ ERROR explicit lifetime required
   |         ^ lifetime `'a` required

error: aborting due to previous error

